test/applyk3.l1.out
error: wrong type to %s conversion
	#0                  printf	(builtin function)
	#1                   entry	(applyk3.l1:14)
in fail 1
1
in success! 1
